--- a/src/styles/home.module.css
+++ b/src/styles/home.module.css
@@ -419,3 +419,34 @@ select {
   color: #000;
   width: auto;
 }
+.gotoIconImage{
+  width: 269px;
+  height: 177px;
+  fill: inherit;
+}
+.gotoIcon{
+  width: 269px;
+  height: 177px;
+}
+.gotoP{
+  margin: 73px 0px 0px 58px;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 26px;
+  line-height: 22px;
+}
+.editInput {
+  /* height: 90px; */
+  padding: 10px;
+  width: 100%;
+  box-sizing: border-box;
+  font-size: 15px;
+  /* border: none; */
+  resize: none;
+  border-top-right-radius: 3px;
+  border-top-left-radius: 3px;
+}
+.editTable{
+  width: 300px;
+  height: 200px;
+}
